[package]
name = "rusty_visualizer"
version = "0.1.0"
authors = ["Ricky12Awesome <rickygraveen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.2"
fnv = "1.0"
num-complex = "0.4.0"
num-traits = "0.2.14"
crossbeam-utils = "0.8.3"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
nannou = { version = "0.15.0", features = ["default", "notosans"] }