[package]
name = "rusty_visualizer_core"
version = "0.1.0"
authors = ["Ricky12Awesome <rickygraveen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "^0.13"
num-complex = "^0.4"
num-traits = "^0.2"
crossbeam-utils = "^0.8"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"