[package]
name = "rusty_visualizer_macroquad"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "^0.3"
egui-macroquad = "^0.6"
egui = "^0.14"
rusty_visualizer_core = { path = "../rusty_visualizer_core" }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"