[package]
name = "rusty_visualizer_macroquad"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = { version = "^0.3", default-features = false } # Disable Audio
egui-macroquad = "0.6.1" # I need to disable audio for this, but can't
egui = "0.14.2" # Needs to be 0.14, 0.15 since it breaks depend above
rusty_visualizer_core = { path = "../rusty_visualizer_core" }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
reqwest = { version = "0.11.8", features = ["blocking"] }
image = "0.23.14"
spotify_info = "0.3"
tokio = { version = "1.15", features = ["full"] }